# taddbindas.github.io

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
blog/: index.html
blog/2024/05/19/testing/: index.html
blog/archive/2024/: index.html
blog/category/general/: index.html
docs/: CNAME  index.md
docs/blog/: .authors.yml
docs/blog/posts/: testing.md
marquette/: index.html
marquette/docs/: index.html
marquette/docs/configurations/example_config/: index.html
marquette/docs/functions/create_N/: index.html
marquette/docs/functions/create_TMs/: index.html
marquette/docs/functions/create_edges/: index.html
marquette/docs/functions/run_extensions/: index.html
marquette/docs/functions/write_streamflow/: index.html
marquette/docs/quickstart/: index.html
projects/: index.html
search/: search_index.json
src/overrides/: home.html  main.html
src/overrides/assets/images/layers/: LICENSE
src/overrides/assets/javascripts/: custom.ts
src/overrides/assets/javascripts/components/: index.ts
src/overrides/assets/javascripts/components/_/: index.ts
src/overrides/assets/javascripts/components/parallax/: index.ts
src/overrides/assets/stylesheets/: custom.scss  home.scss
src/overrides/assets/stylesheets/custom/: _typeset.scss
src/overrides/assets/stylesheets/home/: _typeset.scss
src/overrides/partials/: comments.html  parallax.html
src/overrides/partials/parallax/: connect.html  expect.html  hero.html  spotlight.html  trust.html  users.html
(+16 files in other folders)
